@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-03T00:43:07Z",
-  "count_outdated" : 4864,
-  "uniques_outdated" : 1432,
+  "timestamp" : "2023-08-04T00:42:55Z",
+  "count_outdated" : 4866,
+  "uniques_outdated" : 1433,
   "count" : 4899,
   "uniques" : 1453,
   "clones" : [
-    {
-      "timestamp": "2023-07-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-21T00:00:00Z",
       "count": 3,
