@@ -1,12 +1,7 @@
 {
-  "count": 35,
+  "count": 33,
   "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2023-07-20T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-21T00:00:00Z",
       "count": 3,
