@@ -1,3 +1,12 @@
+2023-08-04T00:42:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5757076856 # 1784
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
+* notice: last 14d: unq all: 10 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 1432 4864 / 1453 4899
+* notice: next accum: outdated-unq outdated-all / unq all: 1433 4866 / 1453 4899
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-20] / []
+
 2023-08-03T00:43:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5745250535 # 1781
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-03
